# curc-pacbot-rl

./: .gitignore  pyproject.toml  writeup.md
pacbot_rs/: Cargo.toml
pacbot_rs/src/: env.rs  lib.rs
src/: eval.py  eval1.py  eval_best.py  policies.py  utils.py
src/algorithms/: hyperparams.json  train_dqn.py
src/algorithms/deprecated/: train_alphazero.py  train_ppo.py
